# GestioneAttivita

./: .gitignore  CMakeLists.txt  attivita.cpp  attivita.h  lista_attivita.cpp  lista_attivita.h  main.cpp  test.cpp
Test/: Test.cpp
